fix mobile layout bug

--- a/src/components/dumb/frames/frames.scss
+++ b/src/components/dumb/frames/frames.scss
@@ -15,9 +15,9 @@
     }
 
     &__try {
-        height: 30px;
-        width: 60px;
-        line-height: 30px;
+        height: 25px;
+        width: 50px;
+        line-height: 25px;
         font-size: 14px;
         border-left: 1px solid $border-color;
         border-bottom: 1px solid $border-color;
@@ -50,5 +50,16 @@
         justify-content: center;
         align-items: center;
         color: $black-color;
+    }
+}
+
+@media only screen and (min-width: $mobile-breakpoint) {
+    .frame {
+     
+        &__try {
+            height: 30px;
+            width: 60px;
+            line-height: 30px;
+        }
     }
 }
