--- a/src/components/dumb/score-table/score-table.scss
+++ b/src/components/dumb/score-table/score-table.scss
@@ -12,8 +12,8 @@
     &__score-frames {
         display: grid;
         grid-gap: 2 * $space;
-        grid-template-columns: repeat(6, 60px);
-        grid-template-rows: repeat(2, 60px);
+        grid-template-columns: repeat(6, 50px);
+        grid-template-rows: repeat(2, 50px);
     }
 
     &__frame {
